# cashstick-firmware

./: .gitignore  CMakeLists.txt  CashStick-TSD-Comprehensive.md  CashStick-URD-Comprehensive.md  LICENSE  README.md
include/: cashstick.h
src/: bitcoin_wallet.c  button_handler.c  flash_storage.c  led_control.c  main.c  se050_interface.c  tamper_detection.c  usb_handler.c
